--- a/docs/blog/posts/quartoblog-subscribe/index.qmd
+++ b/docs/blog/posts/quartoblog-subscribe/index.qmd
@@ -1,6 +1,28 @@
+---
+title: Quarto 블로그에 Subscribe 버튼 설정하기
+subtitle: Mailchimp 연동하기 
+description: |
+  Quarto 블로그에서 제공하는 구독버튼 설정하는 방법에 대하여 알아보자.
+categories:
+  - Blog
+  - Quarto
+author: 이삭
+date: 7/22/2022
+---
+
+## Quarto 블로그의 구독버튼 설정
+
+Quarto를 사용하여 웹사이트를 만들게 되면 사이트 안에 블로그 (정확히는 listing page)를 구성할 수 있게 된다. 공식 홈페이지의 설명이 불충분하게 되어있고, 실제 이메일 서비스와의 연결 방법은 생략되어 있어 작성하게 되었다.
+
+### signup.html 코드
+
+블로그를 구성하기 위하여 `docs` 폴더 안에 `blog` 폴더를 만들어야 하고, `blog` 폴더 바로 아래 구독 버튼과 관련한 파일인 `signup.html` 파일을 찾을 수 있다.
+
+```{r}
+#| eval: false
 <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup" style="padding-bottom: 1em; max-width: 400px;" class="ms-auto me-auto">
-<form action="https://app.us13.list-manage.com/subscribe/post?u=3a65f9cd50e92382b37c77ca5&amp;id=431ec6d99a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="이메일 서비스 가입후 본인 것으로 채워야하는 내용" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<h3>구독하기</h3>
 <div class="mc-field-group">
@@ -21,3 +43,4 @@
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
+```
