--- a/docs/blog/posts/qmd-master/index.qmd
+++ b/docs/blog/posts/qmd-master/index.qmd
@@ -1,20 +1,29 @@
 ---
-title: qmd 작성법 배우기
-subtitle: Quarto로 포스팅을 할 때 사용할 수 있는 문법을 배워봅시다.
+title: Qmd 작성법 배우기 (Visual Editor)
+subtitle: Quarto로 블로그 포스팅을 할 때 사용할 수 있는 문법을 배워봅시다.
 description: |
-  Qmd 의 모든 것!
+  마크다운 기초 문법, 리스트 만들기, 코드 블록 활용법, 다이어그램 그리기
 categories:
   - Quarto
   - Authoring
 author: 슬기로운통계생활
 date: 8/2/2022
-image: coding.jpg
-image-alt: "코딩하는 이미지 입니다."
+image: quarto-logo.jpg
+image-alt: "qmd = quarto + markdown"
 ---
 
-## 가장 중요한 단축키
+![](quarto-logo.jpg){.preview-image fig-align="center" width="750"}
 
-visual editor에서 사용하는 모든 기능을 찾을 수 있는 검색 단축키 `Ctrl + /` 는 무조건 알고 있어야 한다.
+본 포스팅에서는 Qmd 문서를 Visual editor를 사용해서 작성하는 방법에 대하여 알아본다. 관련한 유튜브 영상으로 글로 표현하지 못하는 부분은 대체합니다.
+
+```{=html}
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/8sSLJJyw2lA?start=818&rel=0&showsearch=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+```
+## 가장 중요한 단축키!
+
+Visual editor에서 사용하는 모든 기능을 찾을 수 있는 검색 단축키 `Ctrl + /` 는 무조건 알고 있어야 한다.
+
+![Ctrl + / 를 사용해 기능 검색할 수 있음! (노션과 비슷)](ctrl-slash.png){fig-align="center" width="400"}
 
 ## 글자 서식 방법!
 
@@ -36,11 +45,11 @@ Ctrl + / 를 사용해서 H1 \~ H6 까지 찾아서 쓰자!
 
 ## 링크 넣는법!
 
-Qmd에서 바로 작업시에는 대괄호 안에 표현될 글자, 중괄호 안에 연결할 링크를 넣어야 하지만, Visual Editor에서는 작동하지 않음
+Qmd에서 바로 작업시에는 대괄호 안에 표현될 글자, 중괄호 안에 연결할 링크를 넣어야 하지만, Visual Editor에서는 작동하지 않음.
 
 `[Quarto](https://quarto.org)`
 
-Visual Editor 단축키: Ctrl + K
+Visual Editor에서는 단축키 Ctrl + K를 사용하여 입력하면 된다.
 
 [Quarto](https://quarto.org)
 
@@ -54,13 +63,15 @@ Browse 버튼 눌러서 파일 선택하거나, URL을 집어넣으면 됨.
 
 ![이미지 삽입 메뉴 화면 1](image-insert.png){fig-align="center" width="450"}
 
-크기 조정하는 방법은 일단 삽입 후 점 버튼을 눌러 볼것!
+크기 조정하는 방법은 일단 삽입 후 점 버튼을 눌러 볼 것!
 
 ![](image-insert2.png){fig-align="center" width="450"}
 
 오른쪽의 점 세개를 클릭하면 그림 사이즈 조정하는 옵션 뜬다.
 
-![](image-insert3.png){fig-align="center" width="450"}
+![그림 입력 후 새로 보여지는 크기 조정 옵션](image-insert3.png){fig-align="center" width="450"}
+
+혹은 에디터에서 그림을 클릭하게 되면 바로 아래쪽에 그림 크기 조정 메뉴가 활성화 됨을 알 수 있다.
 
 ## 리스트 만들기
 
@@ -92,6 +103,10 @@ Visual editor 테이블 기능 사용하면 됨. (위쪽 table) 클릭하면 다
 import os
 1 + 1
 ```
+
+위의 코드는 다음과 같이 언어 선택에서 python을 선택한 경우임.
+
+![](codeblock-python.png){fig-align="center" width="400"}
 
 ## 수식 입력 기능
 
